// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PoweredBy unchanged 1`] = `
<div>
  <div
    class="memori--powered-by"
  >
    <img
      alt=""
      src="https://aisuru.com/images/aisuru/logo.png"
    />
    <p>
      <span
        class="sr-only"
      >
        Powered by
      </span>
      <a
        href="https://memori.ai/en"
        rel="noopener noreferrer"
        target="_blank"
      >
        Memori.AI
      </a>
    </p>
  </div>
</div>
`;

exports[`renders PoweredBy with data unchanged 1`] = `
<div>
  <div
    class="memori--powered-by"
  >
    <img
      alt=""
      src="https://aisuru.com/images/aisuru/logo.png"
    />
    <p>
      <span
        class="sr-only"
      >
        Powered by
      </span>
      <a
        href="https://memori.ai/en?integrationID=abc&memori=tenant-owner-memori"
        rel="noopener noreferrer"
        target="_blank"
      >
        Memori.AI
      </a>
    </p>
  </div>
</div>
`;
